--- a/image_site_app/templates/partials/header.html
+++ b/image_site_app/templates/partials/header.html
@@ -1,2 +1,4 @@
-<a href="{% url 'login' %}">Login</a>
-<a href="{% url 'logout' %}">Logout</a>
+<div id="header">
+    <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'logout' %}">Logout</a>
+</div>
