--- a/image_site_app/templates/index.html
+++ b/image_site_app/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {{ user.username }}
+    {% if user.is_authenticated %}
+        {{ user.username }}
+    {% else %}
+        No user logged in
+    {% endif %}
 {% endblock content %}
