--- a/image_site_app/templates/partials/header.html
+++ b/image_site_app/templates/partials/header.html
@@ -1,4 +1,7 @@
 <div id="header">
-    <a href="{% url 'login' %}">Login</a>
-    <a href="{% url 'logout' %}">Logout</a>
+    {% if not request.user.is_authenticated %}
+        <a href="{% url 'login' %}">Login</a>
+    {% else %}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% endif %}
 </div>
