--- a/image_site_app/templates/partials/header.html
+++ b/image_site_app/templates/partials/header.html
@@ -1,6 +1,7 @@
 <div id="header">
     {% if not request.user.is_authenticated %}
         <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'signup' %}">Signup</a>
     {% else %}
         <a href="{% url 'logout' %}">Logout</a>
     {% endif %}
