--- a/image_site_app/templates/partials/header.html
+++ b/image_site_app/templates/partials/header.html
@@ -1,4 +1,6 @@
 <div id="header">
+    <a href="{% url 'index' %}">Home</a>
+
     {% if not request.user.is_authenticated %}
         <a href="{% url 'login' %}">Login</a>
         <a href="{% url 'signup' %}">Signup</a>
