--- a/image_site_app/templates/partials/header.html
+++ b/image_site_app/templates/partials/header.html
@@ -2,9 +2,9 @@
     <a href="{% url 'index' %}">Home</a>
 
     {% if not request.user.is_authenticated %}
-        <a href="{% url 'login' %}">Login</a>
-        <a href="{% url 'signup' %}">Signup</a>
+        <a href="{% url 'account_login' %}">Login</a>
+        <a href="{% url 'account_signup' %}">Signup</a>
     {% else %}
-        <a href="{% url 'logout' %}">Logout</a>
+        <a href="{% url 'account_logout' %}">Logout</a>
     {% endif %}
 </div>
