--- a/image_site_app/templates/base.html
+++ b/image_site_app/templates/base.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Image Site</title>
+
+    {% load bootstrap3 %}
+    {% bootstrap_css %}
 </head>
 <body>
     {% include "partials/header.html" %}
+
     <hr/>
     {% block content %}
     {% endblock content %}
     <hr/>
+
     {% include "partials/footer.html" %}
 </body>
 </html>
