--- a/kanq_app/templates/base.html
+++ b/kanq_app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Image Site</title>
+    <title>Kanq</title>
 
     {% load bootstrap3 %}
     {% bootstrap_css %}
