--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,11 +1,18 @@
 <form (submit)="login(); $event.preventDefault()">
   <span class="h2">LOGIN</span>
+
+  <alert type="danger" [hidden]="!errors">
+    ERRORS
+  </alert>
+
   <div class="form-group">
     <input type="text" [(ngModel)]="user.username" class="form-control" placeholder="Username" name="username">
   </div>
+
   <div class="form-group">
     <input type="password" [(ngModel)]="user.password" class="form-control" placeholder="Password" name="password">
   </div>
+
   <div class="form-group">
     <input type="submit" class="form-control" value="Login">
   </div>
