--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -24,6 +24,6 @@
   </div>
 
   <div class="form-group">
-    <input type="submit" class="form-control" value="Login">
+    <input type="submit" [disabled]="loading" class="form-control" value="Login">
   </div>
 </form>
