Some general changes

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,11 +1,12 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Kanq</a>
+      <a class="navbar-brand" routerLink="/">Kanq</a>
     </div>
 
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Login</a></li>
+      <li><a routerLink="/oauth/facebook/authorize">Facebook login</a></li>
+      <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
       <li><a href="#">Signup</a></li>
     </ul>
   </div>
