Make pages look a little better

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <form (submit)="login(); $event.preventDefault()">
-  <span class="h2">LOGIN</span>
+  <h2 class="page-header text-center">LOGIN</h2>
 
   <alert type="danger" *ngIf="errors">
     <ul *ngIf="errors?.non_field_errors">
