Make Facebook social login button pretty

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,20 +1,25 @@
+<h2 class="page-header text-center">LOGIN</h2>
+
+<a routerLink="/oauth/facebook/authorize" class="btn btn-block btn btn-social btn-facebook">
+  <span class="fa fa-facebook"></span>
+  Facebook login
+</a>
+
+<alert type="danger" *ngIf="errors">
+  <ul *ngIf="errors?.non_field_errors">
+    <li *ngFor="let err of errors?.non_field_errors">{{ err }}</li>
+  </ul>
+  <ul *ngIf="errors?.username">
+    Username:
+    <li *ngFor="let err of errors?.username">{{ err }}</li>
+  </ul>
+  <ul *ngIf="errors?.password">
+    Password:
+    <li *ngFor="let err of errors?.password">{{ err }}</li>
+  </ul>
+</alert>
+
 <form (submit)="login(); $event.preventDefault()">
-  <h2 class="page-header text-center">LOGIN</h2>
-
-  <alert type="danger" *ngIf="errors">
-    <ul *ngIf="errors?.non_field_errors">
-      <li *ngFor="let err of errors?.non_field_errors">{{ err }}</li>
-    </ul>
-    <ul *ngIf="errors?.username">
-      Username:
-      <li *ngFor="let err of errors?.username">{{ err }}</li>
-    </ul>
-    <ul *ngIf="errors?.password">
-      Password:
-      <li *ngFor="let err of errors?.password">{{ err }}</li>
-    </ul>
-  </alert>
-
   <div class="form-group">
     <input type="text" [(ngModel)]="user.username" class="form-control" placeholder="Username" name="username">
   </div>
