API serializer doesn't work jernorentorengeroigoerignoregreoing

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
-      <li><a href="#">Signup</a></li>
+      <li><a routerLink="/signup" routerLinkActive="active">Signup</a></li>
     </ul>
   </div>
 </nav>
