--- a/client/src/app/signup/signup.component.html
+++ b/client/src/app/signup/signup.component.html
@@ -56,6 +56,6 @@
   </div>
 
   <div class="form-group">
-    <input type="submit" [disabled]="loading" class="form-control" value="signup">
+    <input type="submit" [disabled]="loading" class="form-control" value="Signup">
   </div>
 </form>
