--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+.btn-facebook {
+  margin: 15px auto;
+  width: 60%;
+}
+
+input[type="submit"] {
+  width: 60%;
+  margin: 0 auto;
+}
