--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-group">
-      <input type="submit" [disabled]="loading" class="form-control" value="Login">
+      <input type="submit" [disabled]="loading" class="btn btn-primary center-block" value="Login">
     </div>
   </form>
 
