--- a/client/src/app/signup/signup.component.html
+++ b/client/src/app/signup/signup.component.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="form-group">
-      <input type="submit" [disabled]="loading" class="form-control" value="Signup">
+      <input type="submit" [disabled]="loading" class="btn btn-primary center-block" value="Signup">
     </div>
   </form>
 </div>
