--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -17,10 +17,12 @@
 
   <form (submit)="login(); $event.preventDefault()">
     <div class="form-group">
+      <label>Username</label>
       <input type="text" [(ngModel)]="user.username" class="form-control" placeholder="Username" name="username">
     </div>
 
     <div class="form-group">
+      <label>Password</label>
       <input type="password" [(ngModel)]="user.password" class="form-control" placeholder="Password" name="password">
     </div>
 
