--- a/client/src/app/signup/signup.component.html
+++ b/client/src/app/signup/signup.component.html
@@ -33,26 +33,34 @@
 
   <form (submit)="signup(); $event.preventDefault()">
     <div class="form-group">
+      <label>Username</label>
       <input type="text" [(ngModel)]="user.username" class="form-control" placeholder="Username" name="username">
     </div>
 
-    <div class="form-group">
-      <input type="text" [(ngModel)]="user.firstName" class="form-control" placeholder="First Name" name="firstName">
+    <div class="row">
+      <div class="col-sm-6 form-group">
+        <label>First name</label>
+        <input type="text" [(ngModel)]="user.firstName" class="form-control" placeholder="First Name" name="firstName">
+      </div>
+
+      <div class="col-sm-6 form-group">
+        <label>Last name</label>
+        <input type="text" [(ngModel)]="user.lastName" class="form-control" placeholder="Last Name" name="lastName">
+      </div>
     </div>
 
      <div class="form-group">
-      <input type="text" [(ngModel)]="user.lastName" class="form-control" placeholder="Last Name" name="lastName">
-    </div>
-
-     <div class="form-group">
-      <input type="text" [(ngModel)]="user.email" class="form-control" placeholder="E-mail" name="email">
+       <label>Email</label>
+      <input type="text" [(ngModel)]="user.email" class="form-control" placeholder="Email" name="email">
     </div>
 
     <div class="form-group">
+      <label>Password</label>
       <input type="password" [(ngModel)]="user.password" class="form-control" placeholder="Password" name="password">
     </div>
 
      <div class="form-group">
+       <label>Password confirmation</label>
       <input type="password" [(ngModel)]="user.passwordConfirmation" class="form-control" placeholder="Confirm your password" name="passwordConfirmation">
     </div>
 
