--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -4,9 +4,11 @@
       <a class="navbar-brand" routerLink="/">Kanq</a>
     </div>
 
-    <ul *ngIf="!userService.isLoggedIn()" class="nav navbar-nav navbar-right">
-      <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
-      <li><a href="#">Signup</a></li>
+    <ul class="nav navbar-nav navbar-right">
+      <li *ngIf="!userService.isLoggedIn()"><a routerLink="login" routerLinkActive="active">Login</a></li>
+      <li *ngIf="!userService.isLoggedIn()"><a href="#">Signup</a></li>
+      <li *ngIf="userService.isLoggedIn()"><a routerLink="#" (click)="signout()">Signout</a></li>
+      <li *ngIf="userService.isLoggedIn()"><a routerLink="feed">Feed</a></li>
     </ul>
   </div>
 </nav>
