--- a/client/src/app/signup/signup.component.html
+++ b/client/src/app/signup/signup.component.html
@@ -1,34 +1,6 @@
 <h2 class="page-header text-center">SIGNUP</h2>
 
-<alert type="danger" *ngIf="errors">
-  <ul *ngIf="errors?.non_field_errors">
-    <li *ngFor="let err of errors?.non_field_errors">{{ err }}</li>
-  </ul>
-  <ul *ngIf="errors?.username">
-    Username:
-    <li *ngFor="let err of errors?.username">{{ err }}</li>
-  </ul>
-   <ul *ngIf="errors?.firstName">
-    First Name:
-    <li *ngFor="let err of errors?.firstName">{{ err }}</li>
-  </ul>
-   <ul *ngIf="errors?.lastName">
-    Last Name:
-    <li *ngFor="let err of errors?.lastName">{{ err }}</li>
-  </ul>
-   <ul *ngIf="errors?.email">
-    E-mail:
-    <li *ngFor="let err of errors?.email">{{ err }}</li>
-  </ul>
-  <ul *ngIf="errors?.password">
-    Password:
-    <li *ngFor="let err of errors?.password">{{ err }}</li>
-  </ul>
-   <ul *ngIf="errors?.passwordConfirmation">
-    Confirm your password:
-    <li *ngFor="let err of errors?.passwordConfirmation">{{ err }}</li>
-  </ul>
-</alert>
+<errors [(errors)]="errors"></errors>
 
 <form (submit)="signup(); $event.preventDefault()">
   <div class="form-group">
