--- a/client/src/app/topic/topic-index/topic-index.component.css
+++ b/client/src/app/topic/topic-index/topic-index.component.css
@@ -1,4 +1,10 @@
 .topic {
-  height: 100px;
+  height: 30vh;
   text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.best-post-image {
+  height: 20vh;
 }
