--- a/client/src/app/topic/topic-index/topic-index.component.html
+++ b/client/src/app/topic/topic-index/topic-index.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let topic of topics">
-  <div class="topic col-md-3">
+  <div class="topic col-md-3" [class.active]="topic.active" [class.inactive]="!topic.active">
     {{ topic.name }}
 
     <div *ngIf="topic.best_post_image" class="best-post-image-holder">
