Add links from topic index to topic detail

--- a/client/src/app/topic/topic-detail/topic-detail.component.html
+++ b/client/src/app/topic/topic-detail/topic-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="topic">
-  <h2 class="page-header text-center text-capitalize">{{ topic.name }}</h2>
+  <h2 class="page-header text-center text-capitalize">Topic: {{ topic.name }}</h2>
 
   <div *ngFor="let post of topic.posts">
     <div class="post col-md-3">
