Show ratings on topic detail page

--- a/client/src/app/topic/topic-detail/topic-detail.component.html
+++ b/client/src/app/topic/topic-detail/topic-detail.component.html
@@ -8,6 +8,8 @@
       <div class="image-holder">
         <img src="{{ post.image.uri }}" class="image">
       </div>
+
+      Upvotes: {{ post.rating }}
     </div>
   </div>
 </div>
