--- a/client/src/app/signup/signup.component.css
+++ b/client/src/app/signup/signup.component.css
@@ -1,9 +1,22 @@
+.signup {
+  max-width: 380px;
+  padding: 15px 35px 45px;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 7px;
+}
+
+.signup-text{
+  font-family: "Times New Roman";
+}
+
 .btn-facebook {
   margin: 15px auto;
   width: 60%;
 }
 
 input[type="submit"] {
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
 }
