--- a/client/src/app/post/post-detail/post-detail.component.html
+++ b/client/src/app/post/post-detail/post-detail.component.html
@@ -1,7 +1,8 @@
-<div *ngIf="post">
-  <h2 class="page-header text-center text-capitalize">Post: {{ post.title }}</h2>
-</div>
+<div class="post" *ngIf="post">
+  <h2 class="page-header text-center text-capitalize">Title: {{ post.title }}</h2>
+  <img class="post-image center-block" src="{{ post.image.uri }}">
 
-<div *ngIf="!post">
-  Post doesn't exist!
+  <p class="post-description">
+    {{ post.description }}
+  </p>
 </div>
