--- a/client/src/app/comment/comment.component.html
+++ b/client/src/app/comment/comment.component.html
@@ -6,6 +6,11 @@
   Rating: {{ comment.rating }}
   <div class="vote glyphicon glyphicon-arrow-up" (click)="rate(1)"></div>
   <div class="vote glyphicon glyphicon-arrow-down" (click)="rate(-1)"></div>
+  <div class="reply" (click)="openReplyBox()">Reply</div>
+  <div class="reply-box" *ngIf="showReplyBox">
+    <textarea [(ngModel)]="replyText"></textarea>
+    <input type="button" value="Save comment" (click)="createChildComment()">
+  </div>
 
   <div *ngFor="let comment of comment.children">
     <comment [comment]="comment"></comment>
