--- a/client/src/app/post/post-detail/post-detail.component.html
+++ b/client/src/app/post/post-detail/post-detail.component.html
@@ -22,12 +22,7 @@
     {{ post.description }}
   </p>
 
-  <div class="reply" (click)="openReplyBox()">Reply</div>
-  <div class="reply-box" *ngIf="showReplyBox">
-    <textarea [(ngModel)]="replyText"></textarea>
-    <input type="button" value="Save comment" (click)="createChildComment()">
-  </div>
-
+  <reply-box [postId]="post.id" [parent]="null" [commentsContainer]="post.comments"></reply-box>
   <div class="comments">
     <label class="center-block text-center">Comments</label>
     <comment *ngFor="let comment of post.comments" [comment]="comment"></comment>
