Make html and css for page 404. Don't applied - Stack Overflow

--- a/client/src/app/common/not-found/not-found.component.html
+++ b/client/src/app/common/not-found/not-found.component.html
@@ -1,3 +1,4 @@
-<p>
-  not-found works!
-</p>
+<link href="not-found.component.css">
+<div>
+    <a href="http://www.webdesigndev.com/wp-content/uploads/2010/01/151.jpg" alt="backgroud_404" id="404-img" ></a>
+</div>
