--- a/client/src/app/common/not-found/not-found.component.html
+++ b/client/src/app/common/not-found/not-found.component.html
@@ -1,4 +1,5 @@
 <link href="not-found.component.css">
 <div>
-    <a href="http://www.webdesigndev.com/wp-content/uploads/2010/01/151.jpg" alt="backgroud_404" id="404-img" ></a>
+    <img src="http://www.webdesigndev.com/wp-content/uploads/2010/01/151.jpg" alt="background_404" id="not-found-image" >
 </div>
+
