--- a/client/src/app/post/post-detail/post-detail.component.html
+++ b/client/src/app/post/post-detail/post-detail.component.html
@@ -5,11 +5,7 @@
     Topic: {{ post.topic.name }}
   </div>
 
-  <div class="post-rating text-center">
-    Rating: {{ post.rating }}
-    <div class="post-vote glyphicon glyphicon-arrow-up" (click)="rate(1)"></div>
-    <div class="post-vote glyphicon glyphicon-arrow-down" (click)="rate(-1)"></div>
-  </div>
+  <rating [rating]="post.rating" [user_rating]="post.user_rating" (onRatingChanged)="rate($event)"></rating>
 
   <div class="center-block text-center">
     Created by {{ post.creator.username }} on {{ post.created_at | date: 'medium' }}
