Make cursor become a pointer when hovering over the rating buttons

--- a/client/src/app/rating/rating.component.html
+++ b/client/src/app/rating/rating.component.html
@@ -1,9 +1,9 @@
-<div class="post-rating text-center">
+<div class="rating text-center">
   Rating: {{ rating }}
-  <div class="post-vote glyphicon glyphicon-arrow-up"
+  <div class="rating-button glyphicon glyphicon-arrow-up"
        (click)="voteClicked(1)"
        [class.rating-active]="user_rating.value == 1"></div>
-  <div class="post-vote glyphicon glyphicon-arrow-down"
+  <div class="rating-button glyphicon glyphicon-arrow-down"
        (click)="voteClicked(-1)"
        [class.rating-active]="user_rating.value == -1"></div>
 </div>
