--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" routerLink="/">Kanq</a>
+      <a class="navbar-brand" routerLink="/"><img src="assets/images/logo_kanq.png" style="width: 100px;height: 30px"></a>
     </div>
 
     <ul class="nav navbar-nav navbar-right">
-      <li *ngIf="!userService.isLoggedIn()"><a routerLink="login" routerLinkActive="active">Login</a></li>
-      <li *ngIf="!userService.isLoggedIn()"><a routerLink="/signup" routerLinkActive="active">Signup</a></li>
-      <li *ngIf="userService.isLoggedIn()"><a routerLink="topics">Topics</a></li>
-      <li *ngIf="userService.isLoggedIn()"><a routerLink="#" (click)="signout()">Signout</a></li>
+      <li *ngIf="!userService.isLoggedIn()"><a routerLink="login" routerLinkActive="active"> <i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
+      <li *ngIf="!userService.isLoggedIn()"><a routerLink="/signup" routerLinkActive="active"> <i class="fa fa-user-plus" aria-hidden="true"></i> Signup</a></li>
+      <li *ngIf="userService.isLoggedIn()"><a routerLink="topics"><i class="fa fa-picture-o" aria-hidden="true"></i> Topics</a></li>
+      <li *ngIf="userService.isLoggedIn()"><a routerLink="#" (click)="signout()"><i class="fa fa-sign-out" aria-hidden="true"></i> Signout</a></li>
     </ul>
   </div>
 </nav>
