--- a/client/src/app/topic/topic-index/topic-index.component.html
+++ b/client/src/app/topic/topic-index/topic-index.component.html
@@ -1,22 +1,21 @@
 <h2 class="page-header text-center">All topics</h2>
 
-<div class="paginated-list"
+<div class="topics paginated-list"
      infinite-scroll
      [infiniteScrollDistance]="2"
      [infiniteScrollThrottle]="300"
      [immediateCheck]="true"
      (scrolled)="onScroll()">
-  <div class="topics">
-    <div class="topic" *ngFor="let topic of elements">
-      <a routerLink="/topics/{{ topic.id }}/trending">
-        <div class="topic col-md-3" [class.active]="topic.active" [class.inactive]="!topic.active">
-          {{ topic.name }}
+  <div class="topic col-md-3"
+       *ngFor="let topic of elements"
+       [class.active]="topic.active"
+       [class.inactive]="!topic.active">
+    <a routerLink="/topics/{{ topic.id }}/trending">
+      {{ topic.name }}
 
-          <div *ngIf="topic.best_post_image" class="best-post-image-holder">
-            <img src="{{ topic.best_post_image.uri }}" class="best-post-image">
-          </div>
-        </div>
-      </a>
-    </div>
+      <div *ngIf="topic.best_post_image" class="best-post-image-holder">
+        <img src="{{ topic.best_post_image.uri }}" class="best-post-image">
+      </div>
+    </a>
   </div>
 </div>
