Feed is pretty much done, but I am waiting for proper pagination from backend

--- a/client/src/app/feed/feed.component.html
+++ b/client/src/app/feed/feed.component.html
@@ -1,12 +1,22 @@
-<div class="paginated-list"
-     infinite-scroll
-     [infiniteScrollDistance]="2"
-     [infiniteScrollThrottle]="300"
-     [immediateCheck]="true"
-     (scrolled)="onScroll()">
-  <div class="posts">
-    <div class="post" *ngFor="let post of elements">
-      {{ post.id }}: {{ post.title }}
+<div *ngIf="topic">
+  <h2 class="page-header text-center text-capitalize">Feed</h2>
+
+  <div class="paginated-list posts"
+       infinite-scroll
+       [infiniteScrollDistance]="2"
+       [infiniteScrollThrottle]="300"
+       [immediateCheck]="true"
+       (scrolled)="onScroll()">
+    <div *ngFor="let post of elements" class="post col-md-3">
+      <a routerLink="/posts/{{ post.id }}">
+        {{ post.title }}
+
+        <div class="image-holder">
+          <img src="{{ post.image.uri }}" class="image">
+        </div>
+
+        Upvotes: {{ post.rating }}
+      </a>
     </div>
   </div>
 </div>
