--- a/client/src/app/topic/topic-trending/topic-trending.component.html
+++ b/client/src/app/topic/topic-trending/topic-trending.component.html
@@ -9,17 +9,7 @@
        [infiniteScrollThrottle]="300"
        [immediateCheck]="true"
        (scrolled)="onScroll()">
-    <div *ngFor="let post of elements" class="post col-md-3">
-      <a routerLink="/posts/{{ post.id }}">
-        {{ post.title }}
-
-        <div class="image-holder">
-          <img src="{{ post.image.uri }}" class="image">
-        </div>
-
-        Upvotes: {{ post.rating }}
-      </a>
-    </div>
+    <post-glance *ngFor="let post of elements" [post]="post" class="post col-md-3"></post-glance>
   </div>
 </div>
 
