Create post style

--- a/client/src/app/topic/topic-nav/topic-nav.component.html
+++ b/client/src/app/topic/topic-nav/topic-nav.component.html
@@ -1,9 +1,10 @@
 <nav class="topic-nav navbar navbar-default">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
-      <li><a routerLink="../trending" routerLinkActive="active">Trending</a></li>
-      <li><a routerLink="../top" routerLinkActive="active">Top</a></li>
-      <li><a routerLink="../new" routerLinkActive="active">New</a></li>
+
+      <li><a routerLink="../trending" routerLinkActive="active"> <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> Trending</a></li>
+      <li><a routerLink="../top" routerLinkActive="active"> <i class="fa fa-trophy" aria-hidden="true"></i> Top</a></li>
+      <li><a routerLink="../new" routerLinkActive="active"> <i class="fa fa-external-link" aria-hidden="true"></i> New</a></li>
     </ul>
   </div>
 </nav>
