Fiddle with the styles a bit

--- a/client/src/app/post/post-glance/post-glance.component.css
+++ b/client/src/app/post/post-glance/post-glance.component.css
@@ -1,10 +1,9 @@
-/*.post {*/
-  /*height: 30vh;*/
-  /*text-align: center;*/
-  /*margin-top: 10px;*/
-  /*margin-bottom: 10px;*/
-/*}*/
-/**/
+.post {
+  height: 30vh;
+  text-align: center;
+  position: relative;
+}
+
 .image {
   height: 20vh;
   margin: 0 auto;
