--- a/client/src/app/rating/rating.component.html
+++ b/client/src/app/rating/rating.component.html
@@ -1,4 +1,4 @@
-<div class="rating text-right"style="padding-right: 10px; padding-top: 5px">
+<div class="rating text-right">
   <i class="rating-button fa fa-thumbs-o-up"
      aria-hidden="true"
      (click)="voteClicked(1)"
