Make post form into a seperate component

--- a/client/src/app/feed/feed.component.html
+++ b/client/src/app/feed/feed.component.html
@@ -1,5 +1,7 @@
 <h2 class="page-header text-center text-capitalize">Feed</h2>
 
+<post-create></post-create>
+
 <div class="paginated-list posts"
      infinite-scroll
      [infiniteScrollDistance]="2"
