--- a/client/src/app/topic/topic-new/topic-new.component.html
+++ b/client/src/app/topic/topic-new/topic-new.component.html
@@ -2,26 +2,7 @@
   <h2 class="page-header text-center text-capitalize">Topic: {{ topic.name }} (new)</h2>
 
   <topic-nav></topic-nav>
-
-
- <div style="width: 40%; margin: 0 auto;">
-     <form class="add-image">
-         <div class="form-group">
-            <h3>Upload image: </h3>
-             <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp"><hr>
-         </div>
-
-         <div class="form-group">
-             <input type="title" class="form-control" id="title" placeholder="Title">
-         </div>
-
-         <div class="form-group">
-             <label for="exampleTextarea">Describe your post</label>
-             <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-         </div>
-         <button type="button" class="btn btn-primary">Upload</button> <hr>
-     </form> <br>
- </div>
+  <post-create></post-create>
 
   <div class="paginated-list posts"
        infinite-scroll
